se actualiza el readme